@@ -1,39 +1,29 @@
 package com.aptech.apiv1.config;
 
-import com.aptech.apiv1.utils.JwtUtils;
+import com.azure.spring.cloud.autoconfigure.implementation.aad.security.AadJwtGrantedAuthoritiesConverter;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration(proxyBeanMethods = false)
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfiguration {
-
-    @Autowired
-    JwtUtils jwtUtils;
-
-    @Autowired
-    public void configureGlobal(AuthenticationManagerBuilder auth, CustomUserDetailService customUserDetailsService,
-                                PasswordEncoder passwordEncoder) throws Exception {
-        auth.userDetailsService(customUserDetailsService).passwordEncoder(passwordEncoder);
-    }
-
     public static final String[] ENDPOINTS_WHITELIST = {
 
             "/v3/api-docs/**",
@@ -43,47 +33,39 @@ public class SecurityConfiguration {
             "/api-v1/user/login",
             "/api-v1/user/signup",
             "/api-v1/user/refreshtoken",
-            "/api-v1/guest/**",
-            "/write"
+            "/api-v1/guest/**"
             //"/**"
-
     };
 
     @Bean
-    AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
-    }
-
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, AuthenticationManager authenticationManager)
+    public SecurityFilterChain filterChain(HttpSecurity http)
             throws Exception {
-        http
-                // by default uses a Bean by the name of corsConfigurationSource
-                .cors(withDefaults()).csrf(csrf -> csrf.disable())
+        JwtAuthenticationConverter authenticationConverter = new JwtAuthenticationConverter();
+        authenticationConverter.setJwtGrantedAuthoritiesConverter(new AadJwtGrantedAuthoritiesConverter());
+        // by default uses a Bean by the name of corsConfigurationSource
+        http.cors(withDefaults()).csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> {
                     try {
-                        authorize
-                                .requestMatchers(ENDPOINTS_WHITELIST).permitAll()
+                        authorize.requestMatchers(ENDPOINTS_WHITELIST).permitAll()
                                 .anyRequest().authenticated().and().exceptionHandling(handling -> handling
-                                        .authenticationEntryPoint(
-                                                (req, rsp, e) -> rsp.sendError(HttpServletResponse.SC_UNAUTHORIZED)))
-                                .addFilter(new JwtAuthenticationFilter(authenticationManager, jwtUtils))
-                                .addFilter(new JwtAuthorizationFilter(authenticationManager));
+                                        .authenticationEntryPoint((req, rsp, e) -> rsp.sendError(HttpServletResponse.SC_UNAUTHORIZED)))
+                                .oauth2ResourceServer()
+                                .jwt()
+                                .jwtAuthenticationConverter(authenticationConverter);
                     } catch (Exception e) {
                         e.printStackTrace();
                     }
                 }).sessionManagement((session) -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-
         return http.build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PUT", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
